[gd_scene load_steps=7 format=3 uid="uid://cyj4vmysw5ox4"]

[ext_resource type="Script" uid="uid://ba68ggbxy77l4" path="res://src/ui/vendor.gd" id="1_s0efx"]
[ext_resource type="PackedScene" uid="uid://bep8rsyapxtwg" path="res://src/dialogue_system/dialogue_controller.tscn" id="2_x1lrk"]
[ext_resource type="FontFile" uid="uid://deydr763hra6v" path="res://assets/Fonts/RecMonoCasual-Bold-1.085.ttf" id="3_s0efx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3cfgd"]
content_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmhfv"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.470588)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kmhfv"]
content_margin_left = 20.0
content_margin_right = 20.0

[node name="Vendor" type="Node2D" node_paths=PackedStringArray("dialogue_controller", "sell_window")]
process_mode = 3
script = ExtResource("1_s0efx")
dialogue_controller = NodePath("DialogueController")
sell_window = NodePath("CanvasLayer/SellWindow")

[node name="DialogueController" parent="." instance=ExtResource("2_x1lrk")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SellWindow" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_3cfgd")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SellWindow"]
layout_mode = 2

[node name="BugInventory" type="PanelContainer" parent="CanvasLayer/SellWindow/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kmhfv")

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/SellWindow/VBoxContainer/BugInventory"]
layout_mode = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="BugHBoxContainer" type="HBoxContainer" parent="CanvasLayer/SellWindow/VBoxContainer/BugInventory/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_constants/separation = 4

[node name="LowerBar" type="PanelContainer" parent="CanvasLayer/SellWindow/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kmhfv")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/SellWindow/VBoxContainer/LowerBar"]
layout_mode = 2

[node name="SellAll" type="Button" parent="CanvasLayer/SellWindow/VBoxContainer/LowerBar/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_s0efx")
theme_override_font_sizes/font_size = 12
text = "Sell All"

[node name="CurrentCash" type="RichTextLabel" parent="CanvasLayer/SellWindow/VBoxContainer/LowerBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/bold_italics_font_size = 12
bbcode_enabled = true
text = "[b][i]($0)"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="SayGoodbye" type="Button" parent="CanvasLayer/SellWindow/VBoxContainer/LowerBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_s0efx")
theme_override_font_sizes/font_size = 12
text = "Say Goodbye"

[node name="Block Close" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -203.0
offset_bottom = 199.0
grow_horizontal = 0

[connection signal="mouse_entered" from="CanvasLayer/SellWindow/VBoxContainer/LowerBar/HBoxContainer/SellAll" to="." method="_on_sell_all_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/SellWindow/VBoxContainer/LowerBar/HBoxContainer/SellAll" to="." method="_on_sell_all_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/SellWindow/VBoxContainer/LowerBar/HBoxContainer/SellAll" to="." method="_on_sell_all_pressed"]
[connection signal="pressed" from="CanvasLayer/SellWindow/VBoxContainer/LowerBar/HBoxContainer/SayGoodbye" to="." method="_on_say_goodbye_pressed"]
